Remote bugreport notifications rework
Merging two notifications into one.

Bug: 27095707
Change-Id: Ib6582dabb7370f9b3b6e673b19ab43b70c73433a

Former-commit-id: e9377a7d84c23571342ea1c4dc6c12875eaaf3df

--- a/core/res/res/values/strings.xml
+++ b/core/res/res/values/strings.xml
@@ -2920,17 +2920,19 @@
     <string name="adb_active_notification_message">Touch to disable USB debugging.</string>
 
     <!-- Title of notification shown to ask for user consent for sharing a bugreport that was requested remotely by the IT administrator. -->
-    <string name="share_remote_bugreport_notification_title">Share bug report with admin?</string>
+    <string name="share_remote_bugreport_notification_title">Share bug report?</string>
+    <!-- Title of notification shown to indicate that bug report is still being collected after sharing was accepted. -->
+    <string name="sharing_remote_bugreport_notification_title">Sharing bug report</string>
     <!-- Message of notification shown to ask for user consent for sharing a bugreport that was requested remotely by the IT administrator. -->
-    <string name="share_remote_bugreport_notification_message">Your IT admin requested a bug report to help troubleshoot</string>
+    <string name="share_remote_bugreport_notification_message">Your IT admin requested a bug report to help troubleshoot this device. Apps and data may be shared. This may temporarily slow down your device.</string>
+    <!-- Message of notification shown to ask for user consent for sharing a bugreport that was requested remotely by the IT administrator. -->
+    <string name="share_finished_remote_bugreport_notification_message">Your IT admin requested a bug report to help troubleshoot this device. Apps and data may be shared.</string>
+    <!-- Message of notification shown to shown to indicate that bug report is still being collected after sharing was accepted. -->
+    <string name="sharing_remote_bugreport_notification_message">This may temporarily slow down your device</string>
     <!-- Acceptance label of notification shown to ask for user consent for sharing the remote bugreport. -->
     <string name="share_remote_bugreport_notification_accept">ACCEPT</string>
     <!-- Decline label of notification shown to ask for user consent for sharing the remote bugreport. -->
     <string name="share_remote_bugreport_notification_decline">DECLINE</string>
-    <!-- Title of notification shown for remote bugreport progress. -->
-    <string name="remote_bugreport_progress_notification_title">Taking bug report\u2026</string>
-    <!-- Message of notification shown for remote bugreport progress. User can cancel the bugreport -->
-    <string name="remote_bugreport_progress_notification_message_can_cancel">Touch to cancel</string>
 
     <!-- Used to replace %s in urls retreived from the signin server with locales.  For Some        -->
     <!-- devices we don't support all the locales we ship to and need to replace the '%s' with a    -->
